--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#about">about</a>
+            <a href="#price">price</a>
             <a href="#gallery">gallery</a>
             <a href="#service">service</a>
-            <a href="#price">price</a>
             <a href="#review">review</a>
             <a href="#contact">contact</a>
         </nav>
@@ -216,57 +216,43 @@
     <!-- Pricing Ends -->
 
 
-    <!-- Review Starts -->
-
-    <section id="review">
-
-        <h1 class="heading">Review's </h1>
-        <section class="rr">
-            <section class="review">
-
-                <section class="container">
-
-                    <!-- review -->
-
-                    <div class="img-container">
-                        <img src="person-1.jpeg" id="person-img" alt="" />
-                    </div>
-                    <h4 id="author">sara jones</h4>
-                    <p id="job">ux designer</p>
-                    <p id="info">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                        asperiores debitis incidunt, eius earum ipsam cupiditate libero?
-                        Iste, doloremque nihil?
-                    </p>
-                    <!-- prev next buttons-->
-                    <div class="button-container">
-                        <button class="prev-btn">
-                            <i class="fas fa-chevron-left"></i>
-                        </button>
-                        <button class="next-btn">
-                            <i class="fas fa-chevron-right"></i>
-                        </button>
-                    </div>
-                    <!-- random button -->
-                    <button class="random-btn">surprise me</button>
-                </section>
-            </section>
-        </section>
-    </section>
-
-    <!-- Review Ends -->
-
     <!-- Gallery section starts -->
 
-    <section class="Gry" id="Gry">
+    <section class="Gry" id="gallery">
         <h1 class="heading"> Our Gallery </h1>
-
+        <div class="swiper-container home-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="images/slide-0.jpeg" alt=""></div>
+                <div class="swiper-slide"><img src="images/slide-1.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="images/slide-3.jpg" alt=""></div>
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
     </section>
 
     <!-- Gallery section Ends -->
 
 
 
+
+
+
+
+
+
+
+
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
