footer and contact

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
 <body>
 
 
+
+
     <!-- Header Starts -->
 
     <header class="header">
         <a href="#" class="logo"><span>e</span>vento</a>
         <nav class="navbar">
             <a href="#home">home</a>
-            <a href="#about">about</a>
+            <a href="about.html">about</a>
             <a href="#price">price</a>
             <a href="#gallery">gallery</a>
-            <a href="#service">service</a>
+            <!-- <a href="#service">service</a> -->
             <a href="#review">review</a>
             <a href="#contact">contact</a>
         </nav>
@@ -36,6 +38,10 @@
     </header>
 
     <!-- Header Ends -->
+
+
+
+
 
 
 
@@ -95,6 +101,10 @@
 
 
 
+
+
+
+
     <!-- About Starts -->
 
     <section class="about" id="about">
@@ -127,6 +137,9 @@
     </section>
 
     <!-- About Ends -->
+
+
+
 
 
     <!-- Pricing Starts -->
@@ -216,22 +229,30 @@
     <!-- Pricing Ends -->
 
 
+
+
+
     <!-- Gallery section starts -->
 
     <section class="Gry" id="gallery">
         <h1 class="heading"> Our Gallery </h1>
         <div class="swiper-container home-slider">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="images/slide-0.jpeg" alt=""></div>
-                <div class="swiper-slide"><img src="images/slide-1.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/slide-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="images/slide-3.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="https://d14hc83nx8e4z2.cloudfront.net/uploads/2024/01/IMG_5304.jpg"
+                        alt=""></div>
+                <div class="swiper-slide"><img src="https://d14hc83nx8e4z2.cloudfront.net/uploads/2024/01/IMG_5540.jpg"
+                        alt=""></div>
+                <div class="swiper-slide"><img
+                        src="https://d14hc83nx8e4z2.cloudfront.net/uploads/2024/01/IMG_4666-scaled.jpg" alt=""></div>
+                <div class="swiper-slide"><img
+                        src="https://d14hc83nx8e4z2.cloudfront.net/uploads/2024/01/IMG_4373-1.jpg" alt=""></div>
+                <div class="swiper-slide"><img
+                        src="https://d14hc83nx8e4z2.cloudfront.net/uploads/2024/01/IshitaCowLicking.jpg" alt=""></div>
+                <div class="swiper-slide"><img
+                        src="https://d14hc83nx8e4z2.cloudfront.net/uploads/2024/01/VIbhorIshitaWithGheeCows.jpg" alt="">
+                </div>
+                <div class="swiper-slide"><img
+                        src="https://d14hc83nx8e4z2.cloudfront.net/uploads/2024/01/VIbhorWithCows.jpg" alt=""></div>
             </div>
         </div>
         </div>
@@ -244,6 +265,68 @@
 
 
 
+
+    <!-- Contact US Starts -->
+
+    <section class="contact" id="contact">
+        <h1 class="heading"> <span>contact</span> us </h1>
+        <form action="">
+            <div class="inputBox">
+                <input type="text" placeholder="name">
+                <input type="email" placeholder="email">
+            </div>
+            <div class="inputBox">
+                <input type="number" placeholder="number">
+                <input type="text" placeholder="subject">
+            </div>
+            <textarea name="" placeholder="your message" id="" cols="30" rows="10"></textarea>
+            <input type="submit" value="send message" class="btn">
+        </form>
+
+    </section>
+    </section>
+
+    <!-- Contact US Ends -->
+
+
+
+
+
+    <!-- Footer Starts -->
+
+    <section class="footer">
+        <div class="box-container">
+            <div class="box">
+                <h3>find us here</h3>
+                <p>This are our some social media links you can follow us there</p>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                </div>
+            </div>
+
+            <div class="box">
+                <h3>contact us</h3>
+                <p>+91 9579896842</p>
+                <a href="#" class="link">rushikeshshrimanwar@gmail.com</a>
+            </div>
+
+            <div class="box">
+                <h3>localization</h3>
+                <p>
+                    Lorem ipsum dolor sit amet. <br />
+                    Lorem ipsum dolor sit.<br />
+                    Lorem, ipsum.
+                </p>
+            </div>
+        </div>
+
+        <div class="credit">
+            created by <span> AVYUKTH FARMS </span> all rights reserved!
+        </div>
+    </section>
+
+    <!-- Footer Ends -->
 
 
 
