--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#" class="logo"><span>e</span>vento</a>
         <nav class="navbar">
             <a href="#home">home</a>
-            <a href="about.html">about</a>
+            <a href="#about">about</a>
             <a href="#price">price</a>
             <a href="#gallery">gallery</a>
             <!-- <a href="#service">service</a> -->
@@ -129,7 +129,7 @@
                     quasi harum rem asperiores.</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat vero expedita incidunt provident
                     quibusdam aut odit, numquam nesciunt similique nisi.</p>
-                <a href="#" class="btn">Know More</a>
+                <a href="about.html" class="btn">Know More</a>
             </div>
 
         </div>
