--- a/about.html
+++ b/about.html
@@ -1,10 +1,169 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>about</title>
+    <link rel="stylesheet" href="css/about.css">
+    <!-- swiper js -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    
+
+
+
+    <header class="header">
+        <a href="#" class="logo"><span>e</span>vento</a>
+        <nav class="navbar">
+            <a href="index.html">home</a>
+            <a href="#price">price</a>
+            <a href="#gallery">gallery</a>
+            <!-- <a href="#service">service</a> -->
+            <a href="#review">review</a>
+            <a href="#contact">contact</a>
+        </nav>
+        <div id="menu-bars" class="fas fa-bars"></div>
+    </header>
+
+    <div class="marq">
+
+        <marquee behavior="scroll" direction="left" loop="-1">
+            <div class="fas fa-tag">
+                <span id="mt">
+                    Get ready to go down the memory lane!
+                </span>
+            </div>
+            <div class="fas fa-tag">
+                <span id="mt">
+                    Get ready to go down the memory lane!
+                </span>
+            </div>
+            <div class="fas fa-tag">
+                <span id="mt">
+                    Get ready to go down the memory lane!
+                </span>
+            </div>
+            <div class="fas fa-tag">
+                <span id="mt">
+                    Get ready to go down the memory lane!
+                </span>
+            </div>
+            <div class="fas fa-tag">
+                <span id="mt">
+                    Get ready to go down the memory lane!
+                </span>
+            </div>
+
+        </marquee>
+    </div>
+
+
+
+
+    <section class="about" id="about">
+
+        <div class="headingAbout">
+            <h1 class="main_heading">About Us</h1>
+        </div>
+
+
+        <div class="row">
+
+            <div class="image">
+                <img src="https://static.wixstatic.com/media/cbc1ea_9d53078c927f43c4bae3d4184a190408~mv2.png/v1/fill/w_640,h_374,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/cbc1ea_9d53078c927f43c4bae3d4184a190408~mv2.png"
+                    alt="">
+            </div>
+
+            <div class="content">
+                <h3>we will give a very special celebration for you</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse perferendis
+                    perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
+                    perferendis
+                    perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
+                    perferendis
+                    perspiciatis provident dolores fuga in facilis culpa possimus, quia praesentium itaque, sapiente
+                    quasi harum rem asperiores.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat vero expedita incidunt provident
+                    quibusdam aut odit, numquam nesciunt similique nisi.</p>
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <!-- Vision -->
+    <section id="vision-section">
+        <div class="row">
+            <div class="content">
+                <div class="headingAbout">
+                    <h1 class="main_heading">Our Vision</h1>
+                </div>
+                <p> A change that puts an end to exploitation. <br>
+                    <i class="fas fa-arrow-right"></i> Exploitation of the land.<br>
+                    <i class="fas fa-arrow-right"></i> Exploitation of the animals.<br>
+                    <i class="fas fa-arrow-right"></i> Exploitation of the animals.<br>
+                    <i class="fas fa-arrow-right"></i> Exploitation of the animals.<br>
+                    <i class="fas fa-arrow-right"></i> Exploitation of the animals.<br>
+                    <i class="fas fa-arrow-right"></i> Exploitation of the water.<br>
+                    And of course the end consumer, how could they be left out!<br>
+                </p>
+            </div>
+            <div class="image">
+                <img src="https://static.wixstatic.com/media/cbc1ea_9d53078c927f43c4bae3d4184a190408~mv2.png/v1/fill/w_640,h_374,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/cbc1ea_9d53078c927f43c4bae3d4184a190408~mv2.png"
+                    alt="">
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+    <section class="footer">
+        <div class="box-container">
+            <div class="box">
+                <h3>find us here</h3>
+                <p>This are our some social media links you can follow us there</p>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                </div>
+            </div>
+
+            <div class="box">
+                <h3>contact us</h3>
+                <p>+91 9579896842</p>
+                <a href="#" class="link">rushikeshshrimanwar@gmail.com</a>
+            </div>
+
+            <div class="box">
+                <h3>localization</h3>
+                <p>
+                    Lorem ipsum dolor sit amet. <br />
+                    Lorem ipsum dolor sit.<br />
+                    Lorem, ipsum.
+                </p>
+            </div>
+        </div>
+
+        <div class="credit">
+            created by <span> AVYUKTH FARMS </span> all rights reserved!
+        </div>
+    </section>
+
+
+
+
+    <script src="js/about.js"></script>
 </body>
+
 </html>
