some changes in the contact us form

--- a/index.html
+++ b/index.html
@@ -17,20 +17,17 @@
 </head>
 
 <body>
-
-
-
-
     <!-- Header Starts -->
 
     <header class="header">
-        <a href="#" class="logo"><span>e</span>vento</a>
+        <a href="#" class="logo">
+            <image src="images/" />
+        </a>
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#about">about</a>
-            <a href="#price">price</a>
-            <a href="#gallery">gallery</a>
-            <!-- <a href="#service">service</a> -->
+            <a href="#price">Products</a>
+            <a href="#gallery">our gallery</a>
             <a href="#review">review</a>
             <a href="#contact">contact</a>
         </nav>
@@ -120,7 +117,7 @@
 
             <div class="content">
                 <h3>we will give a very special celebration for you</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse perferendis
+                <p class="about-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse perferendis
                     perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
                     perferendis
                     perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
@@ -321,9 +318,9 @@
             <div class="box">
                 <h3>localization</h3>
                 <p>
-                    Lorem ipsum dolor sit amet. <br />
-                    Lorem ipsum dolor sit.<br />
-                    Lorem, ipsum.
+                   shrinager viveknager <br />
+                    Nanded Maharastra : 431605<br />
+                    India
                 </p>
             </div>
         </div>
