some chagnes in the navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header class="header">
         <a href="#" class="logo">
-            <image src="images/" />
+            <image src="images/Avyukt Farms Logo.png" class="logo" >
         </a>
         <nav class="navbar">
             <a href="#home">home</a>
