removing some products form the index.html page

--- a/about.html
+++ b/about.html
@@ -20,17 +20,20 @@
 
 
     <header class="header">
-        <a href="#" class="logo"><span>e</span>vento</a>
+        <a href="index.html" class="logo">
+            <image src="images/Avyukt Farms Logo.png" class="logo" >
+        </a>
         <nav class="navbar">
-            <a href="index.html">home</a>
-            <a href="#price">price</a>
-            <a href="#gallery">gallery</a>
-            <!-- <a href="#service">service</a> -->
+            <a href="#home">home</a>
+            <a href="#about">about</a>
+            <a href="#price">Products</a>
+            <a href="#gallery">our gallery</a>
             <a href="#review">review</a>
             <a href="#contact">contact</a>
         </nav>
         <div id="menu-bars" class="fas fa-bars"></div>
     </header>
+
 
     <div class="marq">
 
