--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header class="header">
         <a href="#" class="logo">
-            <image src="images/Avyukt Farms Logo.png" class="logo" >
+            <image src="images/Avyukt Farms Logo.png" class="logo">
         </a>
         <nav class="navbar">
             <a href="#home">home</a>
@@ -117,7 +117,8 @@
 
             <div class="content">
                 <h3>we will give a very special celebration for you</h3>
-                <p class="about-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse perferendis
+                <p class="about-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut
+                    esse perferendis
                     perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
                     perferendis
                     perspiciatisipsum dolor sit amet consectetur adipisicing elit. Ullam labore fugiat ut esse
@@ -196,6 +197,7 @@
                 </div>
             </div>
         </div>
+        <div class="btn gg"><a href="product.html">Load More</a></div>
 
     </section>
 
@@ -294,7 +296,7 @@
             <div class="box">
                 <h3>localization</h3>
                 <p>
-                   shrinager viveknager <br />
+                    shrinager viveknager <br />
                     Nanded Maharastra : 431605<br />
                     India
                 </p>
