--- a/singleProduct.html
+++ b/singleProduct.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
-    <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="css/sp.css">
     <!-- swiper js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- font awesome -->
@@ -68,73 +68,37 @@
     </div>
 
 
-
-
-    <section class="about gallery" id="about price">
-
-        <div class="headingAbout">
-            <h1 class="main_heading">Products</h1>
-        </div>
-
-        <div class="box-container">
-
-            <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/WhatsAppImage2024-03-26at7.23.32PM.jpg?v=1711461650&width=400"
-                    alt="">
-                <h3 class="title">Small bee honey</h3>
-                <div class="icons">
-                    Rs. 1,249.00
-                    <div class="btn"><a href="singleProduct.html">Visit</a></div>
+    <section class="product-section">
+        <div class="product-card">
+            <div class="left-section">
+                <div class="product-images">
+                    <img src="https://chaitanya.services/Avyukth%C2%A0Farms/images/products/product-1.jpg"
+                        alt="Product Main Image">
+                    <div class="small-images">
+                        <img src="https://chaitanya.services/Avyukth%C2%A0Farms/images/products/product-1.jpg"
+                            alt="Small Image 1">
+                        <img src="https://chaitanya.services/Avyukth%C2%A0Farms/images/products/product-2.jpg"
+                            alt="Small Image 2">
+                    </div>
                 </div>
             </div>
-
-            <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/ecommified_honey_in_light_yellow_color_--v_6_7d3fba5b-e01e-4755-b8f4-efe1ea3a05e8.png?v=1708106514&width=400"
-                    alt="">
-                <h3 class="title">Wild Raw Honey</h3>
-                <div class="icons">
-                    From Rs. 575.00 <div class="btn"><a href="#">Visit</a></div>
+            <div class="right-section">
+                <div class="product-info">
+                    <h2>Product Name</h2>
+                    <p>Product description goes here...</p>
+                    <p>Available sizes: S, M, L, XL</p>
+                    <p>Price: $XX.XX</p>
                 </div>
-            </div>
-            <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/tor.hov_pile_of_dry_saffron_threads_fills_up_frame_pleasing_mac_214b13c2-e76a-43f8-bc20-93d017b80b1e.png?v=1705982784&width=400"
-                    alt="">
-                <h3 class="title">Kashmiri Saffron 1gm</h3>
-                <div class="icons">
-                    Rs. 550.00 <div class="btn"><a href="#">Visit</a></div>
-                </div>
-            </div>
-            <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/Ghee_HighRes.jpg?v=1698928244&width=400" alt="">
-                <h3 class="title">A2 Desi Cow Ghee</h3>
-                <div class="icons">
-                    From Rs. 925.00 <div class="btn"><a href="#">Visit</a></div>
-                </div>
-            </div>
-            <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/Adityark_a_bag_of_a_tan_colored_product_filled_with_turmeric_ki_30bdb482-db0c-4404-8b6c-cb59bec40502.png?v=1685016262&width=400"
-                    alt="">
-                <h3 class="title">Natural Honey</h3>
-                <div class="icons">
-                    From Rs. 475.00 <div class="btn"><a href="#">Visit</a></div>
-                </div>
-            </div>
-            <div class="box">
-                <img src="https://vaaradhifarms.com/cdn/shop/files/image_519177bc-9938-4cfb-b9ad-8b723ca31af2.png?v=1689100808&width=400"
-                    alt="">
-                <h3 class="title">Natural Turmeric</h3>
-                <div class="icons">
-                    From Rs. 175.00 <div class="btn"><a href="#">Visit</a></div>
+                <div class="action-buttons">
+                    <button class="btn">Buy Now</button>
                 </div>
             </div>
         </div>
-
-
-
     </section>
 
 
-    <!-- Vision -->
+
+
 
 
 
@@ -177,7 +141,7 @@
 
 
 
-    <script src="js/product.js"></script>
+    <script src="js/sp.js"></script>
 </body>
 
 </html>
