--- a/index.html
+++ b/index.html
@@ -407,7 +407,12 @@
                 el: ".swiper-pagination",
                 dynamicBullets: true,
             },
+            autoplay: {
+                delay: 2000, 
+                disableOnInteraction: false, 
+            },
         });
+
     </script>
     <script src="js/script.js"></script>
 </body>
