marque tag below the product heading

--- a/product.html
+++ b/product.html
@@ -35,6 +35,10 @@
     </header>
 
 
+    <section class="headingAbout">
+        <h1 class="main_heading">Products</h1>
+    </section>
+
     <div class="marq">
 
         <marquee behavior="scroll" direction="left" loop="-1">
@@ -71,10 +75,6 @@
 
 
     <section class="about gallery" id="about price">
-
-        <div class="headingAbout">
-            <h1 class="main_heading">Products</h1>
-        </div>
 
         <div class="box-container">
 
